# fsm-generator

./: CMakeLists.txt  README.md  empty.xml  test.xml
compiler/: CMakeLists.txt
compiler/src/: code_generator.cpp  code_generator.h  main.cpp
compiler/src/codegen/: event.cpp  event.h  state.cpp  state.h
compiler/src/diagram/: diagram_generator.cpp  diagram_generator.h
compiler/src/xml/: arg_element.cpp  arg_element.h  base_element.cpp  base_element.h  event_element.cpp  event_element.h  fsm_element.cpp  fsm_element.h  guard_element.cpp  guard_element.h  state_element.cpp  state_element.h  transition_element.cpp  transition_element.h
example/: CMakeLists.txt
fsmgen/include/fsmgen/: event.h  fsm.h  fsmgen.h  state.h
